--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -1,32 +1,93 @@
+version: "2"
+
+run:
+  timeout: 5m
+
 linters:
   enable:
+    # Essential linters (enabled by default)
     - errcheck
-    - gofmt
-    - goimports
     - govet
     - ineffassign
     - staticcheck
     - unused
-    - gosimple
-    - gocritic
+
+    # Code quality
     - misspell
+    - gocritic
+    - gosec
     - revive
+    - unconvert
+    - unparam
+    - gocyclo
+
+    # Error handling
+    - errorlint
+    - errname
+
+    # Resource management
+    - bodyclose
+    - rowserrcheck
+    - sqlclosecheck
+
+    # Best practices
+    - nolintlint
+    - prealloc
+    - nilnil
 
 linters-settings:
-  gocritic:
-    enabled-tags:
-      - diagnostic
-      - style
-      - performance
+  govet:
+    enable:
+      - shadow
+
+  gocyclo:
+    min-complexity: 15
+
+  gosec:
+    excludes:
+      - G104  # Unchecked errors
+
   revive:
     rules:
       - name: exported
+        severity: warning
         disabled: false
+      - name: package-comments
+        severity: warning
+        disabled: false
+      - name: var-naming
+        severity: warning
+        disabled: false
+      - name: indent-error-flow
+        severity: warning
+        disabled: false
+      - name: error-return
+        severity: warning
+        disabled: false
+      - name: error-naming
+        severity: warning
+        disabled: false
+
+  gocritic:
+    enabled-tags:
+      - diagnostic
+      - performance
+      - style
+    disabled-checks:
+      - unnecessaryBlock
+
+formatters:
+  enable:
+    - gofmt
+    - goimports
+  settings:
+    goimports:
+      local-prefixes:
+        - github.com/agrahamlincoln/katazuke
 
 issues:
   exclude-use-default: false
   max-issues-per-linter: 0
   max-same-issues: 0
-
-run:
-  timeout: 5m
+  exclude-dirs:
+    - test/mocks
