feat: migrate release automation to tatara
Replace the monolithic release.sh with a two-phase approach:
tatara handles version detection, PKGBUILD update, tagging, push,
and GitHub release creation; the script then cross-compiles binaries
and updates the Homebrew formula as a bolt-on.

- Add packaging/PKGBUILD for tatara-compatible pacman builds
- Rewrite scripts/release.sh (384 -> 257 lines)
- Add --skip-homebrew flag for pacman-only releases
- Remove all aur-katazuke repo references
- Remove PRD.md (gaps filed as issues #14-#20)
- Update CLAUDE.md and README.md to reflect new structure

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,9 @@ bin/
 
 # Claude Code local settings (personal, not shared)
 .claude/settings.local.json
+
+# Packaging artifacts (makepkg build output)
+packaging/src/
+packaging/pkg/
+packaging/*.pkg.tar.zst
+packaging/*.log
