fix: clean makepkg artifacts before running tests in PKGBUILD
makepkg creates src/ and pkg/ under packaging/ with restricted
permissions. Since prepare() symlinks the project root into the
build tree, go test ./... traverses packaging/pkg/ and fails with
"permission denied". Remove these artifacts before the check phase.

--- a/packaging/PKGBUILD
+++ b/packaging/PKGBUILD
@@ -35,6 +35,9 @@ build() {
 
 check() {
     cd "$srcdir/$pkgname-$pkgver"
+    # makepkg creates src/ and pkg/ under packaging/ which have restricted
+    # permissions and cause 'go test ./...' to fail during traversal.
+    rm -rf packaging/src packaging/pkg
     go test ./...
 }
 
