--- a/packaging/PKGBUILD
+++ b/packaging/PKGBUILD
@@ -35,10 +35,9 @@ build() {
 
 check() {
     cd "$srcdir/$pkgname-$pkgver"
-    # makepkg creates src/ and pkg/ under packaging/ which have restricted
-    # permissions and cause 'go test ./...' to fail during traversal.
-    rm -rf packaging/src packaging/pkg
-    go test ./...
+    # Avoid ./... which traverses packaging/src and packaging/pkg directories
+    # that makepkg creates with restricted permissions during the build phase.
+    go test ./cmd/... ./internal/... ./pkg/...
 }
 
 package() {
